istio/flask-app-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
      version: v1
  template:
    metadata:
      labels:
        app: flask-app
        version: v1
    spec:
      containers:
      - name: flask-app
        image: ismaildaoudi/devops-project-dsti-a22:1.0
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
      version: v2
  template:
    metadata:
      labels:
        app: flask-app
        version: v2
    spec:
      containers:
      - name: flask-app
        image: ismaildaoudi/devops-project-dsti-a22:2.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http-app
